Update Developing Data Products - Assignment Week 4 Presentation.Rmd

--- a/Developing Data Products - Assignment Week 4 Presentation.Rmd
+++ b/Developing Data Products - Assignment Week 4 Presentation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Developing Data Products - Assignment Week 4"
+title: "Presentation"
 author: "Haider Khan"
 date: "10/23/2020"
 output: ioslides_presentation
